[project]
name = "flow-matching"
version = "0.1.0"
description = "An implementation of Flow Matching from Flow Matching for Generative Modeling (Lipman et al., 2022)."
readme = "README.md"
authors = [
    { name = "flawley", email = "flawley@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.6",
    "jax>=0.9.2",
]

[project.scripts]
flow-matching = "flow_matching:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 160

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.9",
]
